cip-macros/tests/ui/object_impl_out_of_range_service_id.stderr
error: The service ID must be a u8 (0-255)
  --> tests/ui/object_impl_out_of_range_service_id.rs:17:15
   |
17 |     #[service(256)]
   |               ^^^

error[E0599]: no method named `execute_attribute_service` found for mutable reference `&mut MyObject` in the current scope
  --> tests/ui/object_impl_out_of_range_service_id.rs:15:1
   |
15 | #[cip_object_impl]
   | ^^^^^^^^^^^^^^^^^^
   |
   = note: this error originates in the attribute macro `cip_object_impl` (in Nightly builds, run with -Z macro-backtrace for more info)
